--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,14 @@ html {
 .js-list_item:not(:last-child) {
     margin-right: 25px;
 }
+#validation-input {
+    border: 3px solid #bdbdbd;
+}
+  
+#validation-input.valid {
+    border-color: #4caf50;
+}
+  
+#validation-input.invalid {
+    border-color: #f44336;
+}
